--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.2",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@testing-library/dom": "^10.4.0",
@@ -17,10 +18,12 @@
     "@types/react-dom": "^19.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
